Fix soulmates overflowing container

--- a/static/src/stylesheets/module/commercial/_adverts-soulmates.scss
+++ b/static/src/stylesheets/module/commercial/_adverts-soulmates.scss
@@ -1,6 +1,6 @@
 .adverts--soulmates {
     @include mq($until: tablet) {
-        .adverts__row {
+        &:not(.adverts--manual) .adverts__row {
             > * {
                 flex-basis: calc(33.33% - #{$gs-gutter});
                 &:nth-child(even)::before {
@@ -140,7 +140,7 @@
         display: flex;
 
         > * {
-            flex-basis: calc(50% - #{$gs-gutter / 4});
+            width: calc(50% - #{$gs-gutter / 4});
         }
 
         > * + * {
